--- a/carousel.html
+++ b/carousel.html
@@ -15,7 +15,7 @@
             <div class="cellcontent">
                 <div class="imageholder">
                     <h2 class="date">around 2000</h2>
-                    <img src="images/story1.avif" alt="">
+                    <img src="images/story1.png" alt="">
                 </div>
                 <p>Somewhere around 2000 I was born in Rotem’s sketchbook in Bezalel</p>
             </div>
@@ -24,7 +24,7 @@
             <div class="cellcontent">
                 <div class="imageholder">
                     <h2 class="date">24/12/2001</h2>
-                    <img src="images/story2.avif" alt="">
+                    <img src="images/story2.png" alt="">
                 </div>
                 <p>A page of my first book: ”Luli’s Numbers”<br>It won the ??? graphic design competition!</p>
             </div>
@@ -33,7 +33,7 @@
             <div class="cellcontent">
                 <div class="imageholder">
                     <h2 class="date">09/07/2004</h2>
-                    <img src="images/story4.avif" alt="">
+                    <img src="images/story4.png" alt="">
                 </div>
                 <p>This is my first picture from the photoshoot for Colors That Luly Loves!</p>
             </div>
@@ -51,7 +51,7 @@
             <div class="cellcontent">
                 <div class="imageholder">
                     <h2 class="date">03/01/2014</h2>
-                    <img src="images/story6.avif" alt="">
+                    <img src="images/story6.png" alt="">
                 </div>
                 <p>before i had an android app, Rotem’s friend made me one for apple but she took it down after two months :(</p>
             </div>
@@ -60,7 +60,7 @@
             <div class="cellcontent">
                 <div class="imageholder">
                     <h2 class="date">10/05/2000</h2>
-                    <img src="images/story7.avif" alt="">
+                    <img src="images/story7.png" alt="">
                 </div>
                 <p>My android app we published 2 months ago! Michael made it from scratch over a year (and this website)<br>https://play.google.com/store/apps/details?id=com.theprogames.colorsthatlulyloves</p>
             </div>
