--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
         <div id="storycontainer" class="scroll 2">
             <div class="storyitem">
                 <h3>somewhere around 2000 I was born in Rotem’s sketchbook in Bezalel</h3>
-                <img src="images/story1.avif" alt="">
+                <img src="images/story1.png" alt="">
             </div>
             <div class="storyitem">
                 <h3>a page of my first book! (2001)”Luli’s Numbers” (soon on PlayStore)</h3>
-                <img src="images/story2.avif" alt="">
+                <img src="images/story2.png" alt="">
             </div>
             <div class="storyitem">
                 <h3>this is my first picture! it’s from 2005!</h3>
-                <img src="images/story3.avif" alt="">
+                <img src="images/story3.png" alt="">
             </div>
             <div class="storyitem">
                 <h3>this is from later that day i look a lot more like myself!</h3>
-                <img src="images/story4.avif" alt="">
+                <img src="images/story4.png" alt="">
             </div>
             <div class="storyitem">
                 <h3>the only printed copy of my second book! (2012)</h3>
@@ -113,11 +113,11 @@
             </div>
             <div class="storyitem">
                 <h3>before i had an android app,Rachel made me one, but she terminated it two years after (2014)</h3>
-                <img src="images/story6.avif" alt="">
+                <img src="images/story6.png" alt="">
             </div>
             <div class="storyitem">
                 <h3>my android app I published 1 month ago! it was made from scratch by Michael!</h3>
-                <img src="images/story7.avif" alt="">
+                <img src="images/story7.png" alt="">
             </div>
         </div>
     </section>
@@ -142,25 +142,25 @@
         <div id="familycontainer">
             <div class="family">
                 <h3>Illustrator +<br>Designer + writer</h3>
-                <img src="images/w=346.avif" class="circleimg" alt="">
+                <img src="images/w=346.png" class="circleimg" alt="">
                 <h4>Rotem Omri</h4>
             </div>
             <div class="line"></div>
             <div class="family">
                 <h3>translation</h3>
-                <img src="images/w=434.avif " class="circleimg" alt="">
+                <img src="images/w=434.png " class="circleimg" alt="">
                 <h4>Mel Rosenberg</h4>
             </div>
             <div class="line"></div>
             <div class="family">
                 <h3>iOS app</h3>
-                <img src="images/w=434 (1).avif" class="circleimg" alt="">
+                <img src="images/w=434 (1).png" class="circleimg" alt="">
                 <h4>Rachel Mislovati</h4>
             </div>
             <div class="line"></div>
             <div class="family">
                 <h3>full app development<br>website developer</h3>
-                <img src="images/w=652.avif" class="circleimg" alt="">
+                <img src="images/w=652.png" class="circleimg" alt="">
                 <h4>Michael Levin</h4>
             </div>
         </div>
@@ -180,7 +180,7 @@
                 <h2>here you can see exclusive merch from Luly's shop</h2>
             </div>
             <div id="lavender">
-                <img src="images/lavender.avif" alt="">
+                <img src="images/lavender.png" alt="">
             </div>
         </section>
         <div id="merchcontainer" class="scroll 2">
@@ -223,7 +223,7 @@
                 <h3>socials</h3>
                 <img src="images/infoarrow.png" alt="">
             </div>
-            <img src="images/monkey.avif" alt="">
+            <img src="images/monkey.png" alt="">
         </div>
     </section>
 
@@ -236,13 +236,13 @@
                 <div class="line"></div>
             </div>
             <div id="tangerine">
-                <img src="images/tangerine.avif" alt="">
+                <img src="images/tangerine.png" alt="">
             </div>
         </section>
         <div id="socialscontainer">
             <div class="socialitem">
                 <div class="top">
-                    <img src="images/w=346.avif" class="circleimg" alt="">
+                    <img src="images/w=346.png" class="circleimg" alt="">
                     <div class="text-container">    
                         <h3>Rotem Omri</h3>
                         <h4>Designer + Writer<br><span>054-5306945</span></h4>
@@ -251,26 +251,26 @@
                 <div class="line"></div>
                 <div class="bottom">
                     <div class="app">
-                        <img src="images/fbk.avif" alt="">
+                        <img src="images/fbk.png" alt="">
                         <h4>Facebook</h4>
                     </div>
                     <div class="app">
-                        <img src="images/ins.avif" alt="">
+                        <img src="images/ins.png" alt="">
                         <h4>Instagram</h4>
                     </div>
                     <div class="app">
-                        <img src="images/wts.avif" alt="">
+                        <img src="images/wts.png" alt="">
                         <h4>Whatsapp</h4>
                     </div>
                     <div class="app">
-                        <img src="images/lnk.avif" alt="">
+                        <img src="images/lnk.png" alt="">
                         <h4>LinkedIn</h4>
                     </div>
                 </div>
             </div>
             <div class="socialitem right">
                 <div class="top">
-                    <img src="images/w=652.avif" class="circleimg" alt="">
+                    <img src="images/w=652.png" class="circleimg" alt="">
                     <div class="text-container">    
                         <h3>Michael Levin</h3>
                         <h4>App Developer<br>Website Designer<br><span>054-6807205</span></h4>
@@ -279,19 +279,19 @@
                 <div class="line"></div>
                 <div class="bottom">
                     <div class="app">
-                        <img src="images/fbk.avif" alt="">
+                        <img src="images/fbk.png" alt="">
                         <h4>Facebook</h4>
                     </div>
                     <div class="app">
-                        <img src="images/ins.avif" alt="">
+                        <img src="images/ins.png" alt="">
                         <h4>Instagram</h4>
                     </div>
                     <div class="app">
-                        <img src="images/wts.avif" alt="">
+                        <img src="images/wts.png" alt="">
                         <h4>Whatsapp</h4>
                     </div>
                     <div class="app">
-                        <img src="images/lnk.avif" alt="">
+                        <img src="images/lnk.png" alt="">
                         <h4>LinkedIn</h4>
                     </div>
                 </div>
